# AGENT_FOUNDRY

./: main.py  strands_claude.py  test_agentcore.py
agent/: Dockerfile  README.md  agentcore_strands.py  pyproject.toml  strands_agent_phoenix.py
infra/: README.md  agent_core.tf  agent_core_memory.tf  ecr.tf  outputs.tf  variables.tf
